Change display message timeout

--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -118,7 +118,7 @@
             messageContainer.show();
             setTimeout(function() {
                 messageContainer.fadeOut();
-            }, 1500); // Hide message after 3 seconds
+            }, 150); // Hide message after 150 milliseconds
         }
 
         // Function to update pagination controls
