--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -110,7 +110,7 @@
       jsonData[key] = value;
     });
 
-    fetch('/api/register/user', {
+    fetch('/api/user/register', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
