Cleaning the code from comments

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -126,6 +126,7 @@
             .then(data => {
               // Handle successful registration response
               console.log('Registration successful:', data);
+              alert('Registration successful!')
               // Redirect to /login page
               window.location.href = '/login';
             })
